--- a/index.html
+++ b/index.html
@@ -3,63 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Museu das Memórias</title>
+    <title>Parede de Recordações</title>
     <style>
         body {
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-image: url('https://github.com/Nicolasses/imagens_sites/blob/main/imagem_fundo.png?raw=true'); 
+            background-image: url('https://github.com/Nicolasses/imagens_sites/blob/main/background2.jpg?raw=true'); 
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center center;
-            height: 100vh;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
             color: white;
             text-shadow: 1px 1px 2px black;
         }
 
         h1 {
-            margin: 0;
-            padding: 10px;
-            font-size: 2.5em;
-        }
-
-        p {
-            margin: 10px 0;
-            padding: 10px;
-            font-size: 1.2em;
-        }
-
-        button {
             margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 1em;
-            border: none;
-            border-radius: 5px;
-            background-color: rgba(255, 255, 255, 0.8);
-            color: black;
-            cursor: pointer;
-            transition: background-color 0.3s;
         }
 
-        button:hover {
-            background-color: rgba(255, 255, 255, 1);
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: 20px;
+        }
+
+        .row {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+
+        .photo-frame {
+            width: 200px;
+            height: 200px;
+            margin: 10px;
+            border: 5px solid white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            overflow: hidden;
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+
+        .photo-frame img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     </style>
 </head>
 <body>
-    <h1>Museu das boas memórias</h1>
-    <p>Bem-vinda ao meu grande museu inaugurado por <b>EU MESMO</b>. Você acredita, em? em? em?</p>
-    <button onclick="openNewTab()">Visitar o Museu?</button>
-
-    <script>
-        function openNewTab() {
-            window.open('https://www.youtube.com/shorts/WUS__w_O16c', '_blank'); 
-        }
-    </script>
+    <h1>Parede de Recordações</h1>
+    <div class="container">
+        <div class="row">
+            <div class="photo-frame">
+                <img src="https://raw.githubusercontent.com/username/repository/branch/foto1.jpg" alt="Foto 1"> 
+            </div>
+            <div class="photo-frame">
+                <img src="https://raw.githubusercontent.com/username/repository/branch/foto2.jpg" alt="Foto 2"> 
+            </div>
+            <div class="photo-frame">
+                <img src="https://raw.githubusercontent.com/username/repository/branch/foto3.jpg" alt="Foto 3">
+            </div>
+        </div>
+        <div class="row">
+            <div class="photo-frame">
+                <img src="https://raw.githubusercontent.com/username/repository/branch/foto4.jpg" alt="Foto 4">
+            </div>
+            <div class="photo-frame">
+                <img src="https://raw.githubusercontent.com/username/repository/branch/foto5.jpg" alt="Foto 5"> 
+            </div>
+            <div class="photo-frame">
+                <img src="https://raw.githubusercontent.com/username/repository/branch/foto6.jpg" alt="Foto 6"> 
+            </div>
+        </div>
+        
+    </div>
 </body>
 </html>
