--- a/index.html
+++ b/index.html
@@ -3,112 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parede de Recordações</title>
+    <title>Museu das Memórias</title>
     <style>
         body {
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-image: url('https://github.com/Nicolasses/imagens_sites/blob/main/backgroundd.jpg?raw=true'); 
+            background-image: url('https://github.com/Nicolasses/imagens_sites/blob/main/imagem_fundo.png?raw=true'); 
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center center;
+            height: 100vh;
             display: flex;
             flex-direction: column;
             align-items: center;
-            color: #3c1900;
+            justify-content: center;
+            color: white;
             text-shadow: 1px 1px 2px black;
         }
 
         h1 {
-            margin-top: 20px;
-        }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin-top: 20px;
-        }
-
-        .row {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-
-        .photo-frame {
-            width: 200px;
-            height: 200px;
-            margin: 10px;
-            border: 5px solid white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-            overflow: hidden;
-            background-color: rgba(255, 255, 255, 0.2);
-            text-align: center;
-            position: relative;  
-        }
-
-        .photo-frame img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .photo-frame .description {
-            font-family: arial, sans-serif;
-            position: absolute;  
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background-color: rgba(0, 0, 0, 0.7);  
-            color:black;
             margin: 0;
-            padding: 5px;
-            box-sizing: border-box;
-            font-size: 12px;
-            text-align: center;
+            padding: 10px;
+            font-size: 2.5em;
+        }
+
+        p {
+            margin: 10px 0;
+            padding: 10px;
+            font-size: 1.2em;
+        }
+
+        button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 1em;
+            border: none;
+            border-radius: 5px;
+            background-color: rgba(255, 255, 255, 0.8);
+            color: black;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: rgba(255, 255, 255, 1);
+        }
+
+        #button2 {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 1em;
+            border: none;
+            border-radius: 5px;
+            background-color: rgba(255, 255, 255, 0.8);
+            color: black;
+            cursor: pointer;
+            transition: background-color 0.3s;
+            position: fixed;
+            top: 50%; 
+            left: 50%; 
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
 <body>
-    <h1>Parede de Recordações</h1>
-    <div class="container">
-        <div class="row">
-            <div class="photo-frame">
-                <img src="https://github.com/Nicolasses/imagens_sites/blob/main/recordacoess.jpg?raw=true" alt="Foto 1">
-                <p class="description">Torresmo</p>
-            </div>
-            <div class="photo-frame">
-                <img src="https://raw.githubusercontent.com/username/repository/branch/foto2.jpg" alt="Foto 2">
-                <p class="description">Descrição da Foto 2</p>
-            </div>
-            <div class="photo-frame">
-                <img src="https://raw.githubusercontent.com/username/repository/branch/foto3.jpg" alt="Foto 3">
-                <p class="description">Descrição da Foto 3</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="photo-frame">
-                <img src="https://raw.githubusercontent.com/username/repository/branch/foto4.jpg" alt="Foto 4">
-                <p class="description">Descrição da Foto 4</p>
-            </div>
-            <div class="photo-frame">
-                <img src="https://raw.githubusercontent.com/username/repository/branch/foto5.jpg" alt="Foto 5">
-                <p class="description">Descrição da Foto 5</p>
-            </div>
-            <div class="photo-frame">
-                <img src="https://github.com/Nicolasses/imagens_sites/blob/main/rato_pelado_do_leste_africanoo.png?raw=true" alt="Foto 6">
-                <p class="description">Rato Pelado Do Leste Africano</p>
-            </div>
-        </div>
-        <div class="photo-frame">
-            <img src="https://raw.githubusercontent.com/username/repository/branch/foto2.jpg" alt="Foto 2">
-            <p class="description">Descrição da Foto 7</p>
-        </div>
+    <h1>Museu das boas memórias</h1>
+    <p>Bem-vinda ao meu grande museu inaugurado por <b>EU MESMO</b>. Você acredita, em? em? em?</p>
+    <button onclick="openNewTab()">Visitar o Museu?</button>
+    
+    <button id="button2">Não</button>
+    
+    <script>
+        function moveButton2() {
+            const button2 = document.getElementById("button2");
+            const novaPosicaoTop = Math.random() * window.innerHeight; 
+            const novaPosicaoLeft = Math.random() * window.innerWidth; 
 
-            </div>
-        </div>
-    </div>
+            button2.style.top = novaPosicaoTop + "px";
+            button2.style.left = novaPosicaoLeft + "px";
+        }
+
+        document.getElementById("button2").addEventListener("mouseover", moveButton2);
+
+        function openNewTab() {
+            window.open('https://nicolasses.github.io/Recorda-es-do-Museu/', '_blank'); 
+        }
+    </script>
 </body>
 </html>
