--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         document.getElementById("button2").addEventListener("mouseover", moveButton2);
 
         function openNewTab() {
-            window.open('https://nicolasses.github.io/Recorda-es-do-Museu/', '_blank'); 
+            window.open('https://nicolasses.github.io/RecordacoesDoMuseu/', '_blank'); 
         }
 
         const button1 = document.getElementById("button1");
